# yao-leetcode

./: .Agents.md  03-two-integer-sum-II.ipynb  04-min-stack.ipynb  05-evaluate-reverse-polish-notation.ipynb  08-koko-eating-bananas.ipynb  09-Implement-Trie-(Prefix-Tree).ipynb  Codex-Algo-DataStructures-DeepWiki.html  Other-tips.md  add_two_numbers.ipynb  data-structures-decision-guide.md  pyproject.toml  rank_scores.duckdb  readme.md  sql-concepts.md  sql-core.md  sql-practice-overview.md  sql-problem-solving.md  sql-sample-questions.md  sql-tricks.md
Done/: 01-two_sum.ipynb  03-two-integer-sum-II.ipynb  06-longest-substring-without-repeating-characters.ipynb  10-rank-scores.ipynb  11-second-highest-salary.ipynb  12-k-th-largest-element-in-a-stream.ipynb  13-merge-intervals.ipynb  14-binary-search.ipynb  18-subsets.ipynb  19-number-of-islands.ipynb  20-search-a-2d-matrix.ipynb  22-maximum-depth-of-binary-tree-critique.md  22-maximum-depth-of-binary-tree.ipynb  23-climbing-stairs.ipynb  24-unique-paths.ipynb  26-maximum-subarray.ipynb  27-top-k-frequent-elements.ipynb  28-valid-sudoku.ipynb  49-design-hashset.ipynb  50-design-hashmap.ipynb  51-implement-queue-using-stacks.ipynb  54-design-circular-queue.ipynb  55-design-circular-deque.ipynb  56-insert-delete-getrandom-o1.ipynb  58-group-anagrams.ipynb  59-largest-rectangle-in-histogram.ipynb
Interesting-Algos/: 49-repeated-dna-sequences.ipynb  50-longest-duplicate-substring.ipynb
Stuck/: 08-koko-eating-bananas.ipynb  21-design-add-search-word-data-structure.ipynb
Stuck_and_critiqued/: 08-koko-eating-bananas.ipynb
(+95 files in other folders)
